--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="empty_view_subtitle_text">Get started by adding a product</string>
     <string name="action_insert_dummy_data">Insert Dummy Data</string>
     <string name="action_delete_all_entries">Delete All Products</string>
+    <string name="toast_insert_failed">Product Addition Failed.</string>
+    <string name="toast_insert_success">Product Successfully Added.</string>
 </resources>
