--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     <string name="edit_product">Edit Product</string>
     <string name="usd_sign">$</string>
     <string name="quantity">Quantity:&#160;</string>
+    <string name="hint_product_name">Product Name</string>
+    <string name="hint_product_price">Price (USD)</string>
+    <string name="hint_product_quantity">Quantity</string>
+    <string name="hint_supplier_name">Supplier Name</string>
+    <string name="hint_supplier_email">Supplier Email</string>
+    <string name="hint_supplier_phone">Supplier Phone</string>
+    <string name="action_save">Save</string>
+    <string name="action_delete">Delete</string>
 </resources>
